- Fix bug: autocorrelation test from model window Tests menu
  was broken by new options mechanism
- Fix bug: "--verbose" option for Johansen test was broken
- Fix curious Windows bug: line-endings in scripts were not
  recognized in some cases
- Improve path-searching for data files
- Beef up error-checking on opening of native gretl data files
- Improve error-checking on pvalue command

2/24/2004 version 1.2.3
- Add Tobit model command, with a new plugin (thanks to Jack
  Lucchetti)
- Add color selector for the histogram in frequency plots
- Allow appending/merging of gretl-format data in GUI program
- Fix bug: genr was broken for some special cases of
  repeated function calls
- Fix bug: normal pvalues were being shown as zero for
  large |z-scores| > 9.0
- Fix bug: the NIST checker plugin was broken for locales
  that use ',' as decimal point  
- Daily data: construct a special plotting variable so
  daily time-series can be graphed better; also allow
  for 4-digit years in daily dates (YYYY/MM/DD) on input;
  also fix "genr" so that dummies can be constructed
  as in "genr dum = t < 1987:10:19" (note that the
  slashes must be replaced by colons in this context)
- Text objects: in scripts and the gui console, many
  commands can now have their output diverted to a saved
  object (e.g. "ADF <- adf 1 Ct").  As with models and
  graphs, these objects appear in the Session icon
  window, and they can be displayed and freed using
  objectname.show, objectname.free
- Make the model table available via script and gui console 
  (new command "modeltab")
- Add "graph page" in session view: allows the user to
  create a page (which may then be viewed and printed) 
  containing up to eight graphs (requires latex, dvips and 
  a postscript viewer)
- Add an OLS option, "-r" or "--robust", which calls for
  the use of White's robust standard errors (HC0) in the
  case of cross-sectional data, or HAC in the case of time
  series data.  Details can be configured using the new